# sirenic-examples

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
examples/: a2a.ts  agent-demo.ts  mcp-setup.md  pay-and-call.ts  quote.sh  smoke-test.ts  verify-signature.ts
sdk/python/: README.md  pyproject.toml
sdk/python/sirenic_agents/: __init__.py
sdk/python/sirenic_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: client.ts  index.ts  tools.ts
tutorial-kyb-agent/: README.md  kyb-agent.ts
